# Team02-MachineLearning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  convert.py  inference.py  main.py  object_inference.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug-template.yml
open-cv/: CMakeLists.txt  display_image  display_image.cpp
src/: 100kDataset.py  BDD100kDataset.py  COCODataset.py  CarlaDataset.py  CombinedDataset.py  Dataset.py  MobileNet.py  Model.py  ObjectDetection.py  SCNN.py  SEAMEDataset.py  TUSimpleDataset.py  anchors.py  augmentation.py  converter.cpp  loss.py  main.py  train.py  training.py  unet.py  utils.py
src/OpenCV/: Dataset.py  main.py  training.py  utils.py
